force-app/main/default/objects/Activity/fields/In_abbinata_al_dealer__c.field-meta.xml
<CustomField>
    <fullName>In_abbinata_al_dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In abbinata al dealer</label>
    <type>Checkbox</type>
</CustomField>