force-app/main/default/objects/Activity/fields/Raccolta_campioni__c.field-meta.xml
<CustomField>
    <fullName>Raccolta_campioni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raccolta campioni</label>
    <type>Checkbox</type>
</CustomField>