force-app/main/default/objects/Activity/fields/Service_event_type__c.field-meta.xml
<CustomField>
    <fullName>Service_event_type__c</fullName>
    <label>Service event type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chiamata</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Connessione remota</fullName>
            </value>
            <value>
                <fullName>Training a rivenditore/cliente</fullName>
            </value>
            <value>
                <fullName>Formazione interna</fullName>
            </value>
            <value>
                <fullName>Riunione</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Preparazione materiale</fullName>
            </value>
            <value>
                <fullName>Offerta/ordine</fullName>
            </value>
            <value>
                <fullName>Spedizione</fullName>
            </value>
            <value>
                <fullName>Trasferta</fullName>
            </value>
            <value>
                <fullName>Ferie</fullName>
            </value>
            <value>
                <fullName>Malattia</fullName>
            </value>
            <value>
                <fullName>Reperibilità</fullName>
            </value>
            <value>
                <fullName>Scadenza Contratto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>