force-app/main/default/objects/Activity/fields/Specifiche_visita__c.field-meta.xml
<CustomField>
    <fullName>Specifiche_visita__c</fullName>
    <label>Specifiche visita</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_di_visita__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Con macchina del dealer</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Rimini</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>