force-app/main/default/objects/Activity/fields/Subject_Service__c.field-meta.xml
<CustomField>
    <fullName>Subject_Service__c</fullName>
    <label>Subject Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>