force-app/main/default/objects/Activity/fields/Tipo_di_visita__c.field-meta.xml
<CustomField>
    <fullName>Tipo_di_visita__c</fullName>
    <label>Tipo di visita</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>presentazione macchina</fullName>
            </value>
            <value>
                <fullName>demo tecnica</fullName>
            </value>
            <value>
                <fullName>visita periodica</fullName>
            </value>
            <value>
                <fullName>formazione al dealer</fullName>
            </value>
            <value>
                <fullName>formazione su applicazioni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>